--- a/views/add_series_a.hbs
+++ b/views/add_series_a.hbs
@@ -252,31 +252,31 @@
         <div class="slot">
             <div class="fillup">
                 <i class="fas fa-photo-video"></i>
-                <input id="s_name" name="s_name" type="text" placeholder="Series name">
+                <input id="s_name" name="s_name" type="text" placeholder="Series name" autocomplete="off">
             </div>
             <div class="fillup">
                 <i class="fas fa-user-circle"></i>
-                <input id="s_dir" name="s_dir" type="text" placeholder="director">
+                <input id="s_dir" name="s_dir" type="text" placeholder="director" autocomplete="off">
             </div>
         </div>
         <div class="slot">
             <div class="fillup">
                 <i class="fas fa-video"></i>
-                <input id="s_yr" name="s_yr" type="text" placeholder="Year of Release">
+                <input id="s_yr" name="s_yr" type="text" placeholder="Year of Release" autocomplete="off">
             </div>
             <div class="fillup">
                 <i class="fab fa-imdb"></i>
-                <input id="s_imdb" name="s_imdb" type="text" placeholder="IMDB Ratting">
+                <input id="s_imdb" name="s_imdb" type="text" placeholder="IMDB Ratting" autocomplete="off">
             </div>
         </div>
         <div class="slot">
             <div class="fillup">
                 <i class="fas fa-stopwatch-20"></i>
-                <input id="s_tep" name="s_tep" type="text" placeholder="total episode ">
+                <input id="s_tep" name="s_tep" type="text" placeholder="total episode " autocomplete="off">
             </div>
             <div class="fillup">
                 <i class="fas fa-link"></i>
-                <input id="s_bl" name="s_bl" type="text" placeholder="Banner link">
+                <input id="s_bl" name="s_bl" type="text" placeholder="Banner link" autocomplete="off">
             </div>
         </div>
         <div class="slot">
