--- a/views/edit_ud_b.hbs
+++ b/views/edit_ud_b.hbs
@@ -267,7 +267,7 @@
 
         <div class="main_ud_b">
 
-            <div class="user_d_slot">
+            <!-- <div class="user_d_slot">
                 <div class="user_d_heading_2">
                     <div class="d_box" id="id">ID</div>
                     <div class="d_box" id="fname">First Name</div>
@@ -281,8 +281,8 @@
                     <div class="d_box" id="lname">title</div>
                     <div class="d_box" id="u_email">dummy.12@gmail.com</div>
                     <button id='id' onclick="ed_ud_c(this);"><i class="far fa-edit"></i></button>
-                </div>
-            </div> 
+                </div> 
+            </div> -->
 
         </div>
     </div>
